Fix z-index for center image and adjust footer mobile columns to 25%, 25%, 50%

--- a/assets/component-fragrance-universe.css
+++ b/assets/component-fragrance-universe.css
@@ -388,7 +388,7 @@
     top: 50%;
     transform: translate(-50%, -50%);
     width: 70%;
-    z-index: -1;
+    z-index: 1;
   }
 }
 
